src/snapshots/bminor__parser__test__for_statement-6.snap
---
source: src/parser.rs
expression: "parse_statement(\"for (;;) {}\")"
---
Ok(
    For {
        initializer: None,
        condition: None,
        increment: None,
        body: Block {
            statements: [],
        },
    },
)
