src/snapshots/bminor__parser__test__for_statement-7.snap
---
source: src/parser.rs
expression: "parse_statement(\"for (x: integer = 1;;) {}\")"
---
Ok(
    For {
        initializer: Some(
            VariableDeclaration {
                name: Token {
                    kind: Identifier,
                    lexeme: "x",
                    line: 0,
                },
                variable_type: Atomic {
                    kind: Integer,
                    initializer: Some(
                        Literal {
                            value: Token {
                                kind: IntegerLiteral,
                                lexeme: "1",
                                line: 0,
                            },
                            kind: Integer,
                        },
                    ),
                },
            },
        ),
        condition: None,
        increment: None,
        body: Block {
            statements: [],
        },
    },
)
