src/snapshots/bminor__parser__test__if_statement-2.snap
---
source: src/parser.rs
expression: "parse_statement(\"if ()\")"
---
Err(
    UnexpectedToken(
        "expect expression",
    ),
)
