src/snapshots/bminor__parser__test__if_statement-3.snap
---
source: src/parser.rs
expression: "parse_statement(\"if (false;\")"
---
Err(
    UnexpectedToken(
        "expect ')' after condition",
    ),
)
