src/snapshots/bminor__parser__test__if_statement.snap
---
source: src/parser.rs
expression: "parse_statement(\"if true\")"
---
Err(
    UnexpectedToken(
        "expect '(' after if",
    ),
)
